# MSWA-Project-Pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260411_0001_initial.py  20260422_0002_kaggle_dataset.py  20260509_0002_add_run_eda_result.py  20260509_0003_add_run_steps.py
backend/app/: __init__.py  db.py  enums.py  main.py  models.py  schemas.py
backend/app/api/routes/: alert_rules.py  alerts.py  auth.py  dashboard.py  datasets.py  kaggle.py  pipelines.py  runs.py
backend/app/core/: config.py  observability.py  security.py
backend/app/management/: __init__.py  init_db.py  scheduler.py
backend/app/services/: alerts.py  dashboard.py  demo_content.py  demo_users.py  kaggle_eda.py  pipelines.py  run_steps.py  runs.py  scheduler.py
backend/app/workers/: queue.py  tasks.py  worker.py
backend/tests/: conftest.py  test_alerts.py  test_auth.py  test_datasets.py  test_demo_content.py  test_observability.py  test_pipeline_runs.py  test_scheduler.py  test_security.py
frontend/: .env.example  Dockerfile  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: happy-path.spec.ts
frontend/src/: App.tsx  index.css  theme.ts
infra/: smoke_test.py
infra/keycloak/: export-realm.ps1  pipeline-monitor-realm.json  start-keycloak-mode.ps1
infra/nginx/: backend-lb.conf
infra/terraform/: main.tf  outputs.tf  variables.tf
(+53 files in other folders)
