[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-monitor-backend"
version = "0.1.0"
description = "Big Data Pipeline Monitor backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.15.0",
  "fastapi>=0.116.0",
  "pydantic-settings>=2.10.0",
  "psycopg[binary]>=3.2.0",
  "redis>=6.0.0",
  "rq>=2.5.0",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
]
